src/objects/Model_Failure_Incident__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please describe the model failure incident.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Date__c</fullName>
        <label>Incident Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remediated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the model failure has been resolved.</inlineHelpText>
        <label>Remediated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remediation_Date__c</fullName>
        <label>Remediation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remediation_Efforts__c</fullName>
        <label>Remediation Efforts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <inlineHelpText>Please describe the reason or trigger of the model failure incident.</inlineHelpText>
        <label>Root Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Model Failure Incident</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Incident</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Model Failure Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>